# runice

./: Cargo.toml  Makefile  runice.service
config/00-default/: classes.yml
config/00-default/game/: proton.yml
config/00-default/viewer/: vscode.yml
config/10-default/: _classes.yml  _types.yml  classes.yml  firefox.yml  gnome.yml  lollypop.yml  nicotine+.yml  steam.yml  telegram-desktop.yml  vscode.yml
config/10-default/game/: steam.yml
package/: .gitignore  PKGBUILD
src/: config.rs  enums.rs  main.rs
