
[package]
name = "runice"
version = "0.0.0"
authors = ["droserasprout <droserasprout@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "~0.9.1"
subprocess = "~0.2.6"
log = "~0.4"
simplelog = "~0.7.6"
walkdir = "~2"
serde = { version = "~1.0", features = ["derive"] }
serde_repr = "~0.1"
serde_json = "~1.0.59"
serde_yaml = "*"
strum = "~0.13.0"
strum_macros = "~0.13.0"
enum-map = "~0.6.4"
regex = "~1"
clap = "~3.0.0-beta.2"
phf = { version = "~0.7.24", features = ["macros"] }

[dependencies.config]
version = "~0.10"
features = ["yaml", "json"]