
[package]
name = "runice"
version = "0.0.0"
description = "A daemon to manage process niceness, written in Rust"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]
edition = "2018"

[dependencies]
config = { version = "~0.10", features = ["yaml"]}
clap = "~3.0.0-beta.2"
enum-map = "~0.6.4"
log = "~0.4"
phf = { version = "~0.7.24", features = ["macros"] }
procfs = "~0.9.1"
regex = "~1"
serde_json = "~1.0.59"
serde_repr = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
serde_with = "~1.6.2"
serde_yaml = "*"
simplelog = "~0.7.6"
strum = "~0.13.0"
strum_macros = "~0.13.0"
subprocess = "~0.2.6"
walkdir = "~2"
